--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <p class="cta-subtitle">Enter your email below to request a free, personalized demo.</p>
                 
                 <!-- Contact Form -->
-                <form class="contact-form" action="https://formspree.io/f/your_unique_id" method="POST">
+                <form class="contact-form" action="https://formspree.io/f/mldnbnld" method="POST">
                     <label for="email-input" class="sr-only">Your Email</label>
                     <input type="email" id="email-input" name="email" placeholder="Enter your work email" required>
                     <button type="submit" class="btn btn--primary">Request Demo</button>
